# FEMS-911NurseTriageLine-Public

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  creds.sample.yml  pyproject.toml  requirements.txt
data/: inventory.yml
src/R/: 000_constants.R  000_rmd_setup.R  001_viz_utils.R
src/R/400_analysis/: 030_ambulance_analysis.Rmd  060_clean_ntl_data.R  061_subset_medclaims_outcomeswindow.R  062_identifiers_diagnostic.R  080_medicaid_analysis.R  090-reconcile_safety_counts.R
src/femsntl/: cli.py  datafiles.py  df_verbs.py  readers.py  themes.py  utils.py
src/notebooks/100_preanalysis/: 100_dropped_calls.ipynb  200_power_calculations.ipynb
src/notebooks/200_pull_data/: 010_pull_data_from_safetypad.ipynb  020_extract_data_from_safetypad_pull.ipynb
src/notebooks/300_merge_and_clean/: 010_merge_CAD_safetyPAD.ipynb  011_merge_AMR.ipynb  020_createidentifiers.ipynb
src/notebooks/400_analysis/: 050_medicaid_sample_characteristics.ipynb  070_medicaid_constructoutcomes.ipynb
src/sql/: 052_dhcf_record_matching_code.sql
tests/: 061_test_subset_medclaims_outcomeswindow.R  test_df_verbs.py  test_utils.py
tests/fixtures/: small_text_file.txt
